--- a/templates/home.html
+++ b/templates/home.html
@@ -32,13 +32,14 @@
             <p
               style="
                 font-size: 18px;
-                letter-spacing: 1px;
+                letter-spacing: 0.7px;
                 color: #505050;
                 text-align: center;
+                font-weight :bold;
+                font-style: lora;
               "
             >
-              Ridiculus sociosqu cursus neque cursus curae ante scelerisque
-              vehicula.
+            Discover Your Next Favorite Restaurant
             </p>
           </div>
         </div>
