--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -20,7 +20,7 @@
             </div>
            
 
-            <div class="main-location ml-5">
+            <div class="main-location ">
               <ul>
                 <li class="location-has-children choose-location">
                   <form action="#">
@@ -43,15 +43,18 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="login-option">
-              <a
-                class="cs-color cs-popup-joinus-btn login-popup"
-                data-target="#sign-in"
-                data-toggle="modal"
-                href=""
-                >Login</a> / <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
-                <a class="get-start-btn" href="{% url 'registerVendor' %}">
-                Register Restaurant
-              </a>
+              {% if user.is_authenticated %}
+                <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myAccount' %}">My account</a>
+                <a class="cs-color cs-popup-joinus-btn login-popup text-danger" href="{% url 'logout' %}">Logout</a>
+              {% else %}
+                <a
+                  class="cs-color cs-popup-joinus-btn login-popup" 
+                  href="{% url 'login' %}"
+                  >Login</a></a> / <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
+                  <a class="get-start-btn" href="{% url 'registerVendor' %}">
+                  Register Restaurant
+                </a>
+              {% endif %}
             </div>
           </div>
         </div>
