--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -19,15 +19,15 @@
           <div class="user-dashboard loader-holder" style="width:450px; min-height: auto">
             <div class="user-holder">
               <h4 class="text-center" style="margin-bottom: 0">
-                SIGN IN
+                Forgot your password?
               </h4>
               <p class="text-center">
-                Sign in to order food from your favorite restaurant
+                Please enter your email address to receive a password reset link
               </p>
               <hr />
               <div id="restaurant-sets-holder">
                 <form
-                  action="{% url 'login' %}"
+                  action="{% url 'forgot_password' %}"
                   class="form-fields-set foodbakery-dev-restaurant-form"
                   method="post"
                   enctype="multipart/form-data"
@@ -50,14 +50,6 @@
                                     <input type="email" name="email" id="" placeholder="Enter your email address">
                                   </div>
                                 </div>
-                                <div
-                                  class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
-                                >
-                                  <div class="field-holder">
-                                    <label>Password</label>
-                                    <input type="password" name="password" id="" placeholder="Enter your password">
-                                  </div>
-                                </div>
 
                                 <div
                                   class="col-lg-6 col-md-6 col-sm-6 col-xs-12"
@@ -78,11 +70,10 @@
                             <div class="payment-holder">
                               <input
                                 type="submit"
-                                value="Submit"
+                                value="Continue"
                                 id="btn-next-restaurant-information"
                                 class="bgcolor"
                               />
-                              <a href="{% url 'forgot_password' %}" class="float-right">Forgot password?</a>
                             </div>
                           </div>
                         </div>
