--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -43,7 +43,7 @@
             <div class="copy-right">
               <p>
                 © 2020 Foodbakery. All Rights Reserved. Developed By
-                <a href="#">Rathan Kumar</a>
+                <a href="#">Ini Justiner</a>
               </p>
             </div>
           </div>
