--- a/linifood_main/static/css/custom.css
+++ b/linifood_main/static/css/custom.css
@@ -14,8 +14,8 @@
   z-index: 99;
 }
 
-.btn.btn-info {
-  padding: 2px 1.75;
+.btn {
+  padding: 2.5px 1.75em;
   font-size: 12px;
   cursor: pointer;
 }
