--- a/templates/includes/cover.html
+++ b/templates/includes/cover.html
@@ -1,5 +1,11 @@
 {% load static %}
-<div class="page-section restaurant-detail-image-section" style=" background: url({{vendor.user_profile.cover_photo.url}}) no-repeat scroll 0 0 / cover;">
+
+{% if vendor.user_profile.cover_photo  %}
+  <div class="page-section restaurant-detail-image-section" style=" background: url({{vendor.user_profile.cover_photo.url}}) no-repeat scroll 0 0 / cover;">
+{% else %}
+  <div class="page-section restaurant-detail-image-section" style="background: url({% static 'images/default-cover.PNG' %}) no-repeat scroll 0 0 / cover;">
+{% endif %}
+
       
   <!-- Container Start -->
   <div class="container">
@@ -11,15 +17,22 @@
           <div class="company-info">
             <div class="img-holder">
               <figure>
-                <img src="{{vendor.user_profile.profile_picture.url}}" alt="">
+                {% if vendor.user_profile.profile_picture %}
+                  <img src="{{vendor.user_profile.profile_picture.url}}" alt="Profile Picture">
+                {% else %}
+                  <img src="{% static 'images/default-profile.PNG' %}" alt="Default Profile Picture">
+                {% endif %}
               </figure>
             </div>
 
             <div class="text-holder">
               <span class="restaurant-title">{{vendor.vendor_name}}</span>
               <div class="text">
-                <i class="icon-location"></i>
-                <p>{{vendor.user_profile.address}}</p>
+                {% if vendor.user_profile.address %}
+                  <i class="icon-location"></i>
+                  <p>{{vendor.user_profile.address}}</p>  
+                {%endif %}
+                
               </div>
             </div>
           </div>
