--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,8 @@
     <script src="{% static 'js/bootstrap.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    <script src="{% static 'js/custom.js' %}"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <style>
       body,
