--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -5,7 +5,7 @@
   <!-- Header Start -->
   <header id="header">
     <div class="main-header">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
             <div class="logo">
@@ -36,24 +36,37 @@
                       class="foodbakery-radius-location"
                       ><i class="icon-target5"></i
                     ></span>
+                    
                   </form>
                 </li>
               </ul>
             </div>
           </div>
+          
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            
             <div class="login-option">
+              {% if user.is_authenticated %}
+              <a href="{% url 'cart' %}">
+                <i class="fa fa-shopping-cart text-danger" style="font-size: 20px;"></i>
+                <span class="badge badge-warning" id="cart_counter" style="border-radius: 50px; position:relative; bottom:10px; left: -2px; font-size:10px">{{cart_count}}</span>
+              </a>
+              {% endif %}
+
+              <a href="{% url 'marketplace' %}" class="btn btn-outline-danger text-uppercase font-weight-bold" style="border: 1.4px solid;">marketplace</a>
+              
               {% if user.is_authenticated %}
                 <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myAccount' %}">My account</a>
                 <a class="cs-color cs-popup-joinus-btn login-popup text-danger" href="{% url 'logout' %}">Logout</a>
               {% else %}
+              
                 <a
                   class="cs-color cs-popup-joinus-btn login-popup" 
                   href="{% url 'login' %}"
-                  >Login</a></a> / <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
-                  <a class="get-start-btn" href="{% url 'registerVendor' %}">
+                  >Login</a> / <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
+                 <span><a class="get-start-btn" href="{% url 'registerVendor' %}">
                   Register Restaurant
-                </a>
+                </a></span>
               {% endif %}
             </div>
           </div>
