feat: Complete codebase overhaul
Replaced entire codebase with a new implementation. Improved functionality, optimized performance, and revamped project structure.

--- a/templates/marketplace/checkout.html
+++ b/templates/marketplace/checkout.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
 <!-- Main Section Start -->
@@ -18,7 +19,7 @@
        
                   <div id="menu-item-list-6272" class="menu-itam-list">
                   </div>
-                  <form action="#" method="post">
+                  <form action="{% url 'place_order' %}" method="post">
                     {% csrf_token %}
                     <div class="row">
                       <div class="form-group col-md-6 col-sm-12 col-lg-6">
@@ -79,6 +80,29 @@
             <div class="tab-content">
               <div id="home" class="tab-pane in active">
                 <div class="menu-itam-holder">
+
+                  <div id="menu-item-list-6272" class="menu-itam-list">
+                                        
+                    <ul>
+                      {% for item in cart_items %}
+                        <li id="cart-item-{{item.id}}">
+                            <div class="image-holder"> <img src="{{ item.fooditem.images.url }}" alt=""></div>
+                            <div class="text-holder">
+                                <h6>{{ item.fooditem }}</h6>
+                                <a href="{% url 'vendor_detail' item.fooditem.vendor.vendor_slug %}" class="badge badge-warning">{{ item.fooditem.vendor }}</a>
+                            </div>
+                            <div class="quantity" style="display: inline-block; position: absolute; top: 33%; transform:translateY(-50%); margin-top: -11px; transform:translateX(-70%)">
+                              <span>{{item.quantity}} QTY</span>
+                            </div>
+                            <div class="price-holder">
+                                <span class="price">${{ item.fooditem.price }}</span>
+                            </div>
+                        </li>
+                      {% endfor %}
+                    </ul>
+   
+                </div>
+
                   <div>
                     <ul>
                       <li style="list-style-type: none">
@@ -102,7 +126,22 @@
                             <span id="total">{{grand_total}}</span>
                         </span>
                       </li>
-                      <button type="submit" class="btn btn-danger w-100 mt-3 p-1" style="font-size: 14px;">PLACE ORDER</button>
+                      <!-- Select payment method -->
+                      <h5 style="padding-top: 10px;">SELECT PAYMENT METHOD</h5>
+                      <div class="payment-method">
+                        <label>
+                            <input type="radio" name="payment_method" value="PayPal">
+                            <img src="{% static 'images/PayPal.png' %}" alt="PayPal" width="100">
+                        </label>
+                        &emsp;
+                        <label>
+                            <input type="radio" name="payment_method" value="opay">
+                            <img src="{% static 'images/opay.jpeg' %}" alt="opay" width="100">
+                        </label>
+                    </div>
+                    <span class="text-danger" id="payment-method-error"></span>
+                      <!-- Select payment -->
+                      <button onclick="return payMethodConfirm();" type="submit" class="btn btn-danger w-100 p-2 mt-3">PLACE ORDER</button>
                     </ul>
                   </form>
                     <!-- End form -->
@@ -118,4 +157,25 @@
   </div>
 </div>
 <!-- Main Section End --> 
+<script>
+  function payMethodConfirm(){
+      var payMethod = $("input[name='payment_method']:checked").val()
+      if(!payMethod){
+          $('#payment-method-error').html("Select Payment Method!");
+          return false;
+      }else{
+          var conf = confirm('You have selected '+payMethod+' as your preferred payment method.\nClick "OK" to continue.')
+          if(conf == true){
+              return true;
+          }else{
+              return false;
+          }
+      }
+      
+  }
+
+  $('input[name=payment_method]').on('change', function(){
+      $('#payment-method-error').html("");
+  })
+</script>
 {% endblock content %}
