Improve customer dashboard functionality

--- a/templates/accounts/custDashboard.html
+++ b/templates/accounts/custDashboard.html
@@ -36,7 +36,7 @@
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                   <div class="card">
                     <div class="card-header text-center">
-                      Logged in as: <strong>{{user.email}}</strong>
+                      Logged in as: <strong>{{user.first_name}}&nbsp;{{user.last_name}}</strong>
                     </div>
                     <div class="card-body text-center">
                       <a href="{% url 'cprofile' %}">
