--- a/templates/customers/my_orders.html
+++ b/templates/customers/my_orders.html
@@ -40,7 +40,7 @@
                         <tbody>
                           {% for order in orders %}
                             <tr>
-                              <th>{{order.order_number}}</th>
+                              <td><b><a href="{% url 'order_detail' order.order_number %}" class="text-dark">{{order.order_number}}<a/></b></td>
                               <td>{{order.name}}</td>
                               <td>{{order.total}}</td>
                               <td>{{order.status}}</td>
